--- a/asg3.html
+++ b/asg3.html
@@ -33,7 +33,7 @@ Use keyboard to explore!
 <script src="lib/cuon-matrix-cse160.js"></script>
 <script src="Triangle.js"></script>
 <script src="Cube.js"></script>
-<script src="camera.js"></script>
+<script src="Camera.js"></script>
 <script src="asg3.js"></script>
 </body>
 </html>
